# rust-dxf

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
data/: 1.json  box.json  box12.sli  box2.json  плита.xlsx
src/: lib.rs  main.rs  test.rs
